[tool.poetry]
name = "coffeescript"
version = "0.1.0"
description = ""
authors = ["Christian Ost <christian@christianost.de>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
