[tool.poetry]
name = "coffeescript"
version = "0.1.0"
description = ""
authors = ["Christian Ost <hallo@christianost.de>"]

[tool.poetry.dependencies]
python = "^3.7.4"
Pillow = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
